changes to styles, made inputs/buttons/selects have global styles, fixed widget content options overflowing modal

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,6 +97,8 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
     overflow-y: auto;
+    padding: 0rem;
+    margin-bottom: 2rem;
 }
 
 .modal-widget-content-options::-webkit-scrollbar {
